Olivia hat es auch verstanden

--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "import pandas as pd\n",
     "#change for Maja DANGER ZONE\n",
+    "#neue DANGER ZONE für Maja\n",
     "# Load the CSV file\n",
     "file_path = \"/Users/mass/Downloads/final.csv\"  # Replace with the path to your file\n",
     "df = pd.read_csv(file_path)\n",
